# SwarmTellos

./: readme.md
swarm_msgs/: CMakeLists.txt  package.xml
swarm_msgs/msg/: Position.msg  State.msg
swarm_tellos/: CMakeLists.txt  package.xml
swarm_tellos/launch/: gazebo_launch.py  gazebo_launch2.py  launch__real.py  launch_one.py  one.rviz  rviz_config_swarm_tello.rviz
swarm_tellos/src/: drone_controller.py  drone_controller_gazebo.py  global_controller.py
swarm_tellos/urdf/: tello.xml
swarm_tellos/worlds/: simple.world
