<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>swarm_tellos</name>
  <version>0.1.0</version>
  <description>Swarm Controller to Tellos</description>

  <maintainer email="pedrobranco@poli.ufrj.br">Pedro Branco</maintainer>
  <license>BSD</license>

  <author>Pedro Branco</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros2_shared</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tello_msgs</depend>
  <depend>swarm_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
